<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-black"
        android:text="HERE ARE YOUR RESPONSES:"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_fever"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ans1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-black"
        android:text="TextView"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_cough"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ans2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-black"
        android:text="TextView"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_tired"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ans3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-black"
        android:text="TextView"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_pain"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ans4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-black"
        android:text="TextView"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_sore"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ans5"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-black"
        android:text="TextView"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_taste"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ans6"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-black"
        android:text="TextView"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_heads"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ans7"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-black"
        android:text="TextView"
        android:textAlignment="center" />

    <Button
        android:id="@+id/check"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/_check"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="" />

    <TextView
        android:id="@+id/check_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="" />

    <Button
        android:id="@+id/go_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Refill form"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="" />

</LinearLayout>
</ScrollView>